# boto-spy

./: README.md  boto_session_spy.py  just_boto.py  logger.py  pyproject.toml  script.py
.placebo/: .gitignore
