[tool.poetry]
name = "boto-spy"
version = "0.1.0"
description = "testing placebo"
authors = ["Chris Coleman <chris@rot-26.com>"]
license = "PRIVATE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
